Setting Up DB Infra II

--- a/ecommerce-store/backend/.env
+++ b/ecommerce-store/backend/.env
@@ -1,2 +1,4 @@
 PRODUCTS_SPREADSHEET_ID=1bqrMeLSuBNJPWqa3mfXELjwaMH-9Vt_SziQ03zlAnYs
 ORDERS_SPREADSHEET_ID=1bqrMeLSuBNJPWqa3mfXELjwaMH-9Vt_SziQ03zlAnYs
+GOOGLE_SHEET_ID=1bqrMeLSuBNJPWqa3mfXELjwaMH-9Vt_SziQ03zlAnYs
+PORT=5000
