--- a/ecommerce-store/backend/package.json
+++ b/ecommerce-store/backend/package.json
@@ -2,7 +2,7 @@
   "name": "06-jobs-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
   },
