--- a/ecommerce-store/backend/.env
+++ b/ecommerce-store/backend/.env
@@ -2,3 +2,5 @@ PRODUCTS_SPREADSHEET_ID=1bqrMeLSuBNJPWqa3mfXELjwaMH-9Vt_SziQ03zlAnYs
 ORDERS_SPREADSHEET_ID=1bqrMeLSuBNJPWqa3mfXELjwaMH-9Vt_SziQ03zlAnYs
 GOOGLE_SHEET_ID=1bqrMeLSuBNJPWqa3mfXELjwaMH-9Vt_SziQ03zlAnYs
 PORT=5000
+JWT_SECRET=jwtSecret
+JWT_LIFETIME=10d
