--- a/ecommerce-store/backend/.env
+++ b/ecommerce-store/backend/.env
@@ -3,4 +3,6 @@ ORDERS_SPREADSHEET_ID=1bqrMeLSuBNJPWqa3mfXELjwaMH-9Vt_SziQ03zlAnYs
 GOOGLE_SHEET_ID=1bqrMeLSuBNJPWqa3mfXELjwaMH-9Vt_SziQ03zlAnYs
 PORT=5000
 JWT_SECRET=jwtSecret
-JWT_LIFETIME=5m
+JWT_ACCESS_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
+
