--- a/ecommerce-store/backend/.env
+++ b/ecommerce-store/backend/.env
@@ -5,4 +5,6 @@ PORT=5000
 JWT_SECRET=jwtSecret
 JWT_ACCESS_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=10d
+PAYSTACK_SECRET_KEY=sk_test_4b3ddf83556f10ce8b847bfca36aa5ac08e8abee
+PAYSTACK_BASE_URL=https://api.paystack.co
 
