--- a/ecommerce-store/backend/package.json
+++ b/ecommerce-store/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js"
   },
-  "author": "",
+  "author": "Ifeanyi Nwankwo",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
