--- a/ecommerce-store/backend/.env
+++ b/ecommerce-store/backend/.env
@@ -7,4 +7,5 @@ JWT_ACCESS_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=10d
 PAYSTACK_SECRET_KEY=sk_test_4b3ddf83556f10ce8b847bfca36aa5ac08e8abee
 PAYSTACK_BASE_URL=https://api.paystack.co
+YOUR_NGROK_AUTHTOKEN=389TIxJtX9kKZGmo3vxLs6AHPTf_sUCb575ruT9gcHZzDo76
 
