--- a/ecommerce-store/backend/package.json
+++ b/ecommerce-store/backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^13.0.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
