callback_url added to backend I

--- a/ecommerce-store/backend/.env
+++ b/ecommerce-store/backend/.env
@@ -9,3 +9,4 @@ PAYSTACK_SECRET_KEY=sk_test_4b3ddf83556f10ce8b847bfca36aa5ac08e8abee
 PAYSTACK_PUBLIC_KEY=pk_test_06b7e76ad20b9adece36589296444188558b7659
 PAYSTACK_BASE_URL=https://api.paystack.co
 YOUR_NGROK_AUTHTOKEN=389TIxJtX9kKZGmo3vxLs6AHPTf_sUCb575ruT9gcHZzDo76
+FRONTEND_URL=http://localhost:5173
