--- a/ecommerce-store/backend/.env
+++ b/ecommerce-store/backend/.env
@@ -10,3 +10,6 @@ PAYSTACK_PUBLIC_KEY=pk_test_06b7e76ad20b9adece36589296444188558b7659
 PAYSTACK_BASE_URL=https://api.paystack.co
 YOUR_NGROK_AUTHTOKEN=389TIxJtX9kKZGmo3vxLs6AHPTf_sUCb575ruT9gcHZzDo76
 FRONTEND_URL=http://localhost:5173
+AWS_REGION=us-east-2
+AWS_BUCKET_NAME=shopeasy-s3-buckect
+PORT=5000
