--- a/ecommerce-store/backend/package.json
+++ b/ecommerce-store/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Ifeanyi Nwankwo",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.971.0",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
@@ -27,6 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "swagger-ui-express": "^4.6.0",
     "uuid": "^13.0.0",
     "validator": "^13.6.0",
